# map-stp

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  index.md  install-dev.sh  justfile  noxfile.py  pyproject.toml  ruff.toml  run-coverage
.github/: constraints.txt  dependabot.yml  release-drafter.yml
.github/workflows/: clean-workflow-logs.yml  combine-prs.yml  coverage.yml  labeler.yml  release-drafter.yml  release.yml  release.yml.bak  stale.yml  test-pypi.yml  tests.yml
dev/: clear-prev-dist-info.py  common.rc  doskey_macros.txt  install-mapstp  install-poetry.bat  install-poetry.ps1  install-to-windows-env.bat  release  reset-conda-env.bat  reset-pyenv
docs/: requirements.txt
docs/source/: conf.py  index.rst  mapstp.cli.rst  mapstp.rst  mapstp.utils.rst  modules.rst  reference.rst
src/map_stp/: version.py
src/mapstp/: __init__.py  config.py  core.py  excel.py  exceptions.py  extract_info.py  material.py  materials.py  materials_index.py  merge.py  meta.py  save_table.py  stp_parser.py  tree.py  workflow.py  workflow_sql.py
src/mapstp/cli/: __init__.py  logging.py  mapstp.py  mapstp_logging.py  runner.py
src/mapstp/data/: default-material-index.xlsx  extract-info-0.3.3.py  extract-info-0.3.4.py  extract-volumes-0.2.4.py  extract-volumes-0.2.5.py  materials.txt
src/mapstp/utils/: __init__.py  _io.py  decode_russian_in_stp.py  io.py  re.py  resource.py
src/tests/: test_package.py  test_stp_parser.py
src/tests/cli/: __init__.py  conftest.py  test_mapstp.py
src/tests/data/: test-4-4-components-1-body.stp  test3.i
src/tests/utils/: test_re.py  test_resource.py
tests/: conftest.py  test_config.py  test_extract_info.py  test_material.py  test_materials.py  test_materials_index.py  test_merge.py  test_package.py  test_stp_parser.py
tests/cli/: conftest.py  test_logging.py  test_mapstp.py  test_runner.py
tests/data/: 111.txt  materials-1.txt  test-4-4-components-1-body.i  test-4-4-components-1-body.sqlite  test-4-4-components-1-body.stp  test-5-3-components-1-body.i  test-5-3-components-1-body.sqlite  test-5-3-components-1-body.stp  test-extract-info.i  test-extract-info.sqlite  test-extract-info.stp  test1-with-void.i  test1.i  test1.sqlite  test1.stp  test2-with-void.i  test2.i  test2.stp  test3.sqlite  test3.stp  test3a.i  test3a.sqlite  test3a.stp  tnes-materials.txt  tnes-mi-22-12-19.xlsx  tnes.i  tnes.sqlite  tnes.stp
tests/utils/: __init__.py  test_decode_russian_in_stp.py  test_io.py  test_re.py  test_resource.py
tools/: check-path  clear-prev-dist-info.py  common.rc  doskey_macros.txt  install-poetry  install-poetry.py  install_flake8_deps.py  pipup  reset-pyenv  update
