[build-system]
requires = ["poetry-core >= 2.0.0, <3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mapstp"
dynamic = ["version", "classifiers", "requires-python"]
description = "Transfers meta information from STP to MCNP"
license = { text = "MIT" }
readme = "README.rst"
authors = [
    { name = "dvp2015", email = "dmitri_portnov@yahoo.com" }
]
keywords = ["STP", "MCNP", "SuperMC", "SpaceClaim"]
dependencies = [
    "click (>=8.1.7)",
    "loguru (>=0.7.2)",
    "numpy (>=2.1.3)",
    "openpyxl (>=3.0.9)",
    "pandas (>=2.0.0)",
]

[project.urls]
homepage = "https://github.com/MC-kit/map-stp"
repository = "https://github.com/MC-kit/map-stp"
# documentation = "https://mapstp.readthedocs.io

[project.scripts]
mapstp = "mapstp.cli.runner:mapstp"

[tool.poetry]
version = "1.0.2a0"
packages = [{ include = "mapstp", from = "src" }]
include = [
    { path = "noxfile.py", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "docs", format = "sdist" }
]
exclude = [
    { path = "docs/build" }
]
# Select from PyPI trove classifiers: https://pypi.org/classifiers/
# about dynamic classifiers in poetry: https://python-poetry.org/docs/pyproject/#classifiers-1
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
nox = ">=2022.1.7"
tomli = { version = ">=2.0.1", python = "<3.11" }

#[tool.poetry.group.profile]
#optional = true

#[tool.poetry.group.profile.dependencies]
# TODO dvp: apply yappi: https://coderzcolumn.com/tutorials/python/yappi-yet-another-python-profiler
#yappi = ">=1.3.2"

[tool.poetry.group.pre_commit.dependencies]
pre-commit = ">=2.15.0"
pydocstringformatter = ">=0.7.3"
pyupgrade = ">=3.15.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1"
pytest-cov = ">=4.0"
# pytest-mock = ">=3.9"
# pytest-randomly = ">=3.12"
coverage = { version = ">=6.1.2", extras = ["toml"] }
xdoctest = { extras = ["colors"], version = ">=0.15.10" }

[tool.poetry.group.coverage.dependencies]
coverage = { version = ">=6.1.2", extras = ["toml"] }

[tool.poetry.group.xdoctest.dependencies]
xdoctest = { extras = ["colors"], version = ">=0.15.10" }

[tool.poetry.group.typeguard.dependencies]
typeguard = ">=4.1.5"

[tool.poetry.group.mypy.dependencies]
mypy = ">=1.2.0"
pep8-naming = ">=0.12.1"
types-setuptools = ">=57.4.2"
numpy = ">=1.26.2"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3"
sphinx-autodoc-typehints = ">=1.19.5"
sphinx-click = ">=4.4.0"

[tool.poetry.group.docs_auto.dependencies]
sphinx-autobuild = ">=2021.3.14"

[tool.poetry.group.ruff.dependencies]
ruff = ">=0.0.259"

[tool.pytest.ini_options]
minversion = "6.2"
cache_dir = '.cache/pytest'
norecursedirs = '''
*.egg-info
.*
build
data
dist
docs/_build
docs/examples
htmlcov
notebooks
tools
wrk
'''
python_functions = "test_*  profile_*"
addopts = '''
-ra
-q
--tb=short
--doctest-modules
--strict-markers
--ignore setup.py
--failed-first
--xdoctest
'''
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
testpaths = ["tests", "src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# xfail tests that pass should fail the test suite
xfail_strict = true
filterwarnings = [
    "error",
    'ignore:Implementing implicit namespace packages \(as specified in PEP 420\) is preferred to `pkg_resources.declare_namespace`',
    "ignore:.*not typechecking multipledispatch.dispatcher.*UserWarning",
    'ignore:.*io.FileIO \[closed\]',
    'ignore:.*Deprecated call to `pkg_resources.declare_namespace',
    'ignore:.*Implicit None on return values:DeprecationWarning',
    # pandas 2.1.4 at python 3.12
    'ignore:.*datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
    # openpyxl 3.1.2 qt python 3.12
    'ignore:.*datetime.datetime.utcnow\(\):DeprecationWarning'
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.xdoctest]
quiet = true
options = ""

[tool.coverage.paths]
source = ["src", ".nox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*_tab.py", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85   # TODO dvp: restore tests for STP parsing code or remove it at all
omit = ["*_tab.py", "**/__init__.py"]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
sort = "Cover"


# MyPy config
# See https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
#     https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m
[tool.mypy]
python_version = "3.12"
strict = true
follow_imports = "silent"
disallow_untyped_defs = true
files = "src/**/*.py"
exclude = '''(?x)(
    data/.*\.py$     # python files given as data (for SpaceClaim)
  | cli/runner\.py$  # mypy doesn't like decorators
  )'''
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "IPython.core.magic",
    "IPython.core.magic_arguments",
    "click",
    "click.testing",
    "loguru",
    "multipledispatch",
    "nox",
    "numpy.testing",
    "pandas",
    "polars",
    "pytest",
    "scipy.constants",
    "scipy.sparse",
    "tomli",
    "tomllib",
    "xdoctest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tomllib",
    "tomli",
]
allow_redefinition = true
disable_error_code = "no-redef"

[tool.check-manifest]
ignore = [
    "tests/*",
    "tools/*",
    "*.yaml",
    "noxfile.py",
]

[tool.ipdb]
# For debugging in jupyterlab and ipython
# see https://github.com/gotcha/ipdb
context = 5

[tool.tryceratops]
include = ["src"]
experimental = true

[tool.pydocstringformatter]
write = true
style = "pep257"
exclude = ["tools/**", "src/**/*_parser.py", "src/**/*_tab.py"]
strip-whitespaces = true
max-line-length = 100
summary-quotes-same-line = true


[tool.pylint]
good-names-rgxs = ["."]  # a single character variable is okay
logging-format-style = "new"   # use {} in logging messages
deprecated-modules = ["six"]
extension-pkg-allow-list = ["duckdb"]
disable = [
    "wrong-import-order"  # this is `ruff format` responsibility
]

[tool.ruff]
target-version = "py310"

line-length = 100

# show an enumeration of all autofixed lint violations
show-fixes = true

# show source code snippets when reporting violations
output-format = "concise"

src = ["src", "tests"]

exclude = [
    "*.egg-info",
    ".direnv",
    ".cache",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "_build",
    "adhoc",
    "build",
    "dist",
    "docs/source/conf.py",
    "notebooks",
    "venv",
    "src/mapstp/data",
    "wrk",
]

[tool.ruff.lint]
#see full list: https://beta.ruff.rs/docs/rules/#pyflakes-f
#or run 'ruff linter' to see a brief list
select = [
    "A", # flake8-builtins
    "AIR", # Airflow https://airflow.apache.org/docs/apache-airflow/stable/index.html
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    # "CPY", # flake8-copyright
    "D", # pydocstyle
    "DJ", # flake8-django
    # "DOC", # pydoclint
    "DTZ", # flake8-datetimez
    "E", # pycodestyle
    "EM", # flake8-errmsg
    "ERA", # eradicate
    "EXE", # flake8-executable
    "F", # Pyflakes
    "FA", # flake8-future-annotations
    # "FAST", # FastAPI
    "FBT", # flake8-boolean-trap  https://adamj.eu/tech/2021/07/10/python-type-hints-how-to-avoid-the-boolean-trap
    # "FIX", # flake8-fixme
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-log
    "N", # pep8-naming
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    "T20", # flake8-print
    # "TD", # flake8-todos
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle 2
    "YTT", # flake8-2020
]

# Ignore rules that currently fail on the codebase
ignore = [
    "ANN202", # ANN202 Missing return type annotation for protected function: ... dispatching
    "COM812", # may cause conflicts when used with the ruff formatter
    "D105", # D105 Missing docstring in magic method (__hash__, __eq__)
    "D107", # Missing docstring in __init__

    "ISC001", # may cause conflicts when used with the ruff formatter

    "PLE1205", # logging-too-many-args - we use loguru with '{' style of placeholders

    "PLR2004", # magic number - don't want declare 0.0 as constant
    "PT019", # Fixture `_bin` without value is injected as parameter (false positive?)
]


[tool.ruff.lint.per-file-ignores]
"benchmarks/*" = ["S101"]
"cli/*" = ["ANN001"]
"tests/*" = ["ANN", "D100", "D101", "D102", "D103", "D104", "PLR2004", "RUF001", "S101"]
"tools/*" = ["T201", "INP001", "S603", "S607"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true  # skip return type for __init__() methods

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-type-checking]
strict = true

# warning: The isort option `isort.split-on-trailing-comma` is incompatible
# with the formatter `format.skip-magic-trailing-comma=true` option.
# To avoid unexpected behavior, we recommend either setting `isort.split-on-trailing-comma=false`
# or `format.skip-magic-trailing-comma=false`.

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["mpl_toolkits", "matplotlib", "numpy", "scipy", "loguru", "tqdm", "dotenv"]
default-section = "third-party"
lines-between-types = 1
required-imports = ["from __future__ import annotations"]
case-sensitive = true
section-order = [
    "future",
    "typing",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "testing"
]

[tool.ruff.lint.isort.sections]
"typing" = ["typing", "typing_extension"]
"testing" = ["tests"]

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings.

[tool.ruff.format]
docstring-code-format = true

[tool.jupytext]
# https://jupytext.readthedocs.io/en/latest/config.html
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,md,py:percent"

[tool.creosote]
paths = ["src"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]
exclude-deps = [
    "openpyxl",
]
