[build-system]
requires = ["uv_build>=0.7.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mapstp"
version = "1.0.3"
requires-python = ">=3.11,<4" 
description = "Transfers meta information from STP to MCNP"
authors = [
  { name = "dvp2015", email = "dmitri_portnov@yahoo.com" }
]
readme = "README.rst"
license = { text = "MIT" }
keywords = [
  "STP",
  "MCNP",
  "SuperMC",
  "SpaceClaim",
  "GEOUNED",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click (>=8.1.7)",
    "loguru (>=0.7.2)",
    "numpy (>=2.3.1)",
    "openpyxl (>=3.0.9)",
    "pandas (>=2.0.0)",
]

[project.urls]
homepage = "https://github.com/MC-kit/map-stp"
repository = "https://github.com/MC-kit/map-stp"
# documentation = "https://mapstp.readthedocs.io

[project.scripts]
mapstp = "mapstp.cli.runner:mapstp"

[dependency-groups]
dev = [{ include-group = "style" }, { include-group = "test" }]
style = [
    { include-group = "pre_commit" },
    { include-group = "ruff" },
    { include-group = "mypy" },
    { include-group = "lint" },
]
pre_commit = ["pre-commit>=4.3.0", "pydocstringformatter>=0.7.3"]
ruff = ["ruff>=0.0.259"]
mypy = [
    "mypy>=1.2.0",
    "pep8-naming>=0.12.1",
    "types-setuptools>=80.9.0.20250529",
]
lint = ["pylint", "pylint-per-file-ignores"]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-durations>=1.5.2",
    "pytest-emoji>=0.2.0",
    "xdoctest>=1.2.0",
    { include-group = "coverage" }, # coverage may be used on its own, see GHA test
]
coverage = ["coverage[toml]>=7.9.2"]
# environments not in dev
typeguard = ["typeguard>=4.1.5"]
docs = [
    "rstcheck[toml,sphinx]>=6.2.5",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-click>=6.1.0",
]
analyze = ["jupyterlab>=4.2.5", "jupytext>=1.16.4"]

[tool.pytest.ini_options]
minversion = "8.4"
cache_dir = '.cache/pytest'
norecursedirs = '''
*.egg-info
.*
build
data
dist
docs/_build
docs/examples
htmlcov
notebooks
tools
wrk
'''
python_functions = "test_*  profile_*"
addopts = '''
-ra
-q
--tb=short
--doctest-modules
--strict-markers
--ignore setup.py
--failed-first
--xdoctest
--pytest-durations-min=1
--pytest-resultlog="pytest-result.log"
'''
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES NUMBER"
testpaths = ["tests", "src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
# xfail tests that pass should fail the test suite
xfail_strict = true
filterwarnings = [
    "error",
    # 'ignore:Implementing implicit namespace packages \(as specified in PEP 420\) is preferred to `pkg_resources.declare_namespace`',
    "ignore:.*not typechecking multipledispatch.dispatcher.*UserWarning",
    'ignore:.*io.FileIO \[closed\]',
    # 'ignore:.*Deprecated call to `pkg_resources.declare_namespace',
    'ignore:.*Implicit None on return values:DeprecationWarning',
    # # pandas 2.1.4 at python 3.12
    # 'ignore:.*datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
    # # openpyxl 3.1.2 qt python 3.12
    # 'ignore:.*datetime.datetime.utcnow\(\):DeprecationWarning',
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.xdoctest]
quiet = true
options = ""

[tool.coverage.paths]
source = ["src", ".nox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*_tab.py", "**/__init__.py", "tools/*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85   # TODO dvp: restore tests for STP parsing code or remove it at all
omit = ["*_tab.py", "**/__init__.py"]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
sort = "Cover"


# MyPy config
# See https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
#     https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m
[tool.mypy]
python_version = "3.13"
cache_dir = ".cache/mypy"
strict = true
follow_imports = "silent"
disallow_untyped_defs = true
files = "src/**/*.py"
exclude = '''(?x)(
    data/.*\.py$     # python files given as data (for SpaceClaim)
  | cli/runner\.py$  # mypy doesn't like decorators
  )'''

[[tool.mypy.overrides]]
module = [
    "IPython.core.magic",
    "IPython.core.magic_arguments",
    "click",
    "click.testing",
    "dask.*",
    "duckdb",
    "loguru",
    "mckit_nuclides.*",
    "msgspec",
    "multipledispatch",
    "nox",
    "numpy",
    "numpy.testing",
    "pandas",
    "polars",
    "pytest",
    "scipy.constants",
    "scipy.sparse",
    "tomli",
    "tomllib",
    "xdoctest",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomllib"]
allow_redefinition = true
disable_error_code = "no-redef"

[tool.jupytext]
# https://jupytext.readthedocs.io/en/latest/config.html
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,py:percent"

[tool.creosote]
paths = ["src"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]
exclude-deps = [
    "openpyxl",
]

[tool.rstcheck]
report_level = "ERROR"
ignore_messages = '(Unknown directive type \"click|todo|(auto(module|class|function))\"\.)'
